--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     Kullanıcının önüne çıkartacağımız alert içinde link olmasını istersek şu şekilde ekleriz.<br>
     <div class="alert alert-primary">
         Alert link ekleme 
-        <a href="" class="https://ayyildizramazan1.github.io/ayyildizramazan1.githup.io/">ödev için tık</a>
+        <a href="" class="alert-link">ödev için tık</a>
     </div>
     </div><br>
 
