--- a/index.html
+++ b/index.html
@@ -143,6 +143,66 @@
     </div>
 
     </div>
+    <br>
+    <div class="cerceve">
+        <h3>Bootstrap Badges Nedir?</h3>
+        Badges ilgi çekmek, ekstra bilgi mesajı vermek, kullanıcıyı uyarmak için kullanılır.<br>
+        Badges kullanılırken kullanıcı önüne çıkarttığımız uyarı yada diğer kullanımlarda Aleert kullanımında olduğu gbi etiketler ile renk değişikliği yapılabilir.<br>
+        Bu etiketler primary, secondary,success,danger, warning, info, light, darktır.<br>
+        Etiketler amaca ve kullanım şekline göre badges de arka fon renk değişikliği yapar şimdi kullanımlara bakalım<br>
+    </div><br>
+    <div class="cerceve">
+        <h3>Badges Kullanım Şekilleri</h3>
+        <span class="badge bg-primary">Primary</span>
+        <span class="badge bg-secondary">Secondary</span>
+        <span class="badge bg-success">Success</span>
+        <span class="badge bg-danger">Danger</span>
+        <span class="badge bg-warning">Warning</span>
+        <span class="badge bg-info">Info</span>
+        <span class="badge bg-light text-dark">Light</span>
+        <span class="badge bg-dark">Dark</span>
+    </div><br>
+    <div class="cerceve">
+        <h3>Badge Kodlar</h3>
+        <xmp>
+    <span class="badge bg-primary">Primary</span>
+    <span class="badge bg-secondary">Secondary</span>
+    <span class="badge bg-success">Success</span>
+    <span class="badge bg-danger">Danger</span>
+    <span class="badge bg-warning">Warning</span>
+    <span class="badge bg-info">Info</span>
+    <span class="badge bg-light text-dark">Light</span>
+    <span class="badge bg-dark">Dark</span>
+        </xmp>
+    </div>
+    <div class="cerceve">
+        <h3>Başlık Yanında Badge Kullanımı</h3>
+        Kullanıcıya başlık yanında dikkat çekmek istersek şu şekilde kullanırız.<br><br>
+        <h3>Dikkat Çekeceğimiz Başlık <span class="badge bg-danger">Dikkat Lütfen</span></h3><br>
+        Dikkati çektiğimize göre kodu görebiliriz ama atlamamız gereken yer ben kullanırken "badge bg-danger" olarak kullandım siz isterseniz danger yerine istediğiniz etiketi kullanabilirsiniz.
+        <br>
+        <xmp>
+        <h3>Dikkat Çekeceğimiz Başlık <span class="badge bg-danger">Dikkat Lütfen</span></h3>
+        </xmp><br>
+    </div>
+    <div class="cerceve">
+        <h3>Kullanıcıya Buton ile Göstermek</h3><br>
+        Kullanıcıya mesaj filan geldiğini göstermek istersek bunu buton ekliyerek yapabiliriz.<br>
+        Kullanmı şu şekilde oluyor.<br>
+        <button type="button" class="btn btn-primary">
+            Mesajınız Var Lütfen Bakar mısınız?...<span class="badge bg-danger">3</span>
+          </button><br>
+          Kullanıcıya mesaj geldiğini gösterdik şimdi kodlarını görelim.<br>
+          <xmp>
+            <button type="button" class="btn btn-primary">
+                Mesajınız Var Lütfen Bakar mısınız?...<span class="badge bg-danger">3</span>
+              </button><br>
+          </xmp><br>
+          Ben tekrardan "badge bg-danger" kullandım siz danger yerine istediğiniz etiketi kullanabilirsiniz.<br>
+          <br>
+          <br>
+
+    </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
