--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
     </div>
     <div class="cerceve">
         <h3>Kullanıcıya Buton ile Göstermek</h3><br>
-        Kullanıcıya mesaj filan geldiğini göstermek istersek bunu buton ekliyerek yapabiliriz.<br>
-        Kullanmı şu şekilde oluyor.<br>
+        Kullanıcıya mesaj vb. geldiğini göstermek istersek bunu buton ekliyerek yapabiliriz.<br>
+        Kullanımı şu şekilde oluyor.<br>
         <button type="button" class="btn btn-primary">
             Mesajınız Var Lütfen Bakar mısınız?...<span class="badge bg-danger">3</span>
           </button><br>
