--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <style>
+        .h{
+         font-size: 100%;
+        }
         .cerceve{
             border-style:solid;
             border-color: black;
@@ -31,8 +34,8 @@
         <div class="cerceve">
         
         <h3>Alert nedir? </h3> <br>
-        Alert kullanıcının önüne önemli bir şey yada sitede bir şey yaptıktan sonra başarılı yada başarısız olduğunda çıkartmak için kullanılır.<br>
-        Alert kutularını oluşturabilmek  için alert sınıfından sonra primary,secondary,success,danger,warning,info,dark,light sınıfları kullanılabilir.<br>
+        <p class="h">Alert kullanıcının önüne önemli bir şey yada sitede bir şey yaptıktan sonra başarılı yada başarısız olduğunda çıkartmak için kullanılır.<br>
+        Alert kutularını oluşturabilmek  için alert sınıfından sonra primary,secondary,success,danger,warning,info,dark,light sınıfları kullanılabilir.</p><br>
             <br>
     </div>
         <br>
