--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <style>
         .h{
-         font-size: 100%;
+            font-size:17px;
         }
+
         .cerceve{
             border-style:solid;
             border-color: black;
@@ -34,7 +35,7 @@
         <div class="cerceve">
         
         <h3>Alert nedir? </h3> <br>
-        <p class="h">Alert kullanıcının önüne önemli bir şey yada sitede bir şey yaptıktan sonra başarılı yada başarısız olduğunda çıkartmak için kullanılır.<br>
+        <p<Alert kullanıcının önüne önemli bir şey yada sitede bir şey yaptıktan sonra başarılı yada başarısız olduğunda çıkartmak için kullanılır.<br>
         Alert kutularını oluşturabilmek  için alert sınıfından sonra primary,secondary,success,danger,warning,info,dark,light sınıfları kullanılabilir.</p><br>
             <br>
     </div>
