--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <style>
         .h{
-            font-size:17px;
+            font-size:20px;
         }
 
         .cerceve{
@@ -35,7 +35,7 @@
         <div class="cerceve">
         
         <h3>Alert nedir? </h3> <br>
-        <p<Alert kullanıcının önüne önemli bir şey yada sitede bir şey yaptıktan sonra başarılı yada başarısız olduğunda çıkartmak için kullanılır.<br>
+        <p>Alert kullanıcının önüne önemli bir şey yada sitede bir şey yaptıktan sonra başarılı yada başarısız olduğunda çıkartmak için kullanılır.<br>
         Alert kutularını oluşturabilmek  için alert sınıfından sonra primary,secondary,success,danger,warning,info,dark,light sınıfları kullanılabilir.</p><br>
             <br>
     </div>
